--- a/rro_overlays/SettingsOverlay/res/values/strings.xml
+++ b/rro_overlays/SettingsOverlay/res/values/strings.xml
@@ -13,6 +13,6 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <string name="elixir_maintainer">Nishant Kumar</string>
+    <string name="elixir_maintainer">Rayhan77</string>
 
 </resources>
